<resources>
    <string name="app_name">VRKnock</string>
    <string name="title_activity_host_info">Host Info</string>
    <string name="default_notification_message">Someone Wants Your Attention!</string>
    <string name="knock">Knock</string>
    <string name="searching_host">Searching Host...</string>
    <string name="scan_code">Scan Code</string>
    <string name="connection_code">Connection Code</string>
    <string name="host_ip">Host IP</string>
    <string name="done">Done</string>
    <string name="message_to_show">Message to Show</string>
    <string name="failed_to_connect">Failed to connect!</string>
    <string name="server_disconnect">Server closed connection</string>
    <string name="connected">Connected!</string>
    <string name="currently_idle">Currently Idle</string>
    <string name="currently_playing">Currently Playing %s</string>
    <string name="connecting">Connecting...</string>
    <string name="connection_info_updated">Connection Info Updated!</string>
    <string name="failed_get_code">Failed to get code</string>
    <string name="about_version">Version %s</string>
    <string name="about_dev_description">Developed by inventivetalent</string>
    <string name="about_dev_link">https://inventivetalent.org</string>
    <string name="about_translations">Translations</string>
    <string name="connect">Connect</string>
    <string name="change_host_info">Change Host Info</string>
    <string name="download_server_app">Download Server App</string>
    <string name="about">About</string>
    <string name="outdated_server">The Server Version (%s) is Outdated! Please Install the Latest Version.</string>
    <string name="outdated_client">The App Version is Outdated! Either Updated the App or Install an Older Server Version.</string>
    <string name="help">Help</string>
    <string name="missing_host_info">Missing Host Info!</string>
    <string name="title_activity_about">About</string>
</resources>
