<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="VRKnock Logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_foreground" />
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView" android:textSize="36sp" android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/versionTextView" android:text="@string/about_version" android:textSize="18sp" app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="4dp"/>

    <TextView
            android:id="@+id/versionCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/versionTextView"
            tools:text="0000" />

    <View
            android:id="@+id/divider"
            android:layout_width="395dp"
            android:layout_height="4dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/divider" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingTop="5dp" android:paddingBottom="5dp">
            <TextView
                    android:text="@string/about_dev_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView1" android:textSize="16sp"/>
            <TextView
                    android:autoLink="web"
                    android:text="@string/about_dev_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2"/>
        </LinearLayout>

<!--        <View-->
<!--                android:id="@+id/divider2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="?android:attr/listDivider" />-->
<!--        <LinearLayout-->
<!--                android:orientation="vertical"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent" android:paddingTop="5dp" android:paddingBottom="5dp">-->


<!--            <TextView-->
<!--                    android:text="@string/about_translations"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content" android:id="@+id/textView7" android:textSize="20sp"/>-->
<!--            <TextView-->
<!--                    android:autoLink="web"-->
<!--                    android:text="@string/about_crowdin_link"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content" android:id="@+id/textView8"/>-->

<!--            <TextView-->
<!--                    android:id="@+id/textView9"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/about_translators_german" />-->
<!--            <TextView-->
<!--                    android:text="@string/about_translators_dutch"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content" android:id="@+id/textView10"/>-->
<!--            <TextView-->
<!--                    android:text="@string/about_translators_french"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content" android:id="@+id/textView11"/>-->
<!--            <TextView-->
<!--                    android:text="@string/about_translators_hungarian"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content" android:id="@+id/textView12"/>-->
<!--            <TextView-->
<!--                    android:text="@string/about_translators_norwegian"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content" android:id="@+id/textView13"/>-->
<!--            <TextView-->
<!--                    android:text="@string/about_translators_spanish"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content" android:id="@+id/textView14"/>-->
<!--            <TextView-->
<!--                    android:text="@string/about_translators_swedish"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content" android:id="@+id/textView15"/>-->
<!--        </LinearLayout>-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>